--- a/index.html
+++ b/index.html
@@ -2,8 +2,29 @@
 <html>
 <head>
 	<title>Triangle Area</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
 </head>
 <body>
+	<h1>Triangle &#9651;rea</h1>
+	<div class="container">
+		<div class="row">
+			<div class="col s12 m6 l6">
+				CANVAS
+			</div>
+			<div class="col s12 m6 l6">
+				BUTTONS
+			</div>
+		</div>
+	</div>	 
 
+
+
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
