--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="img/triangle.png" type="image/x-icon"/>
 </head>
 <body>
 	<section id="one">
@@ -20,9 +21,9 @@
 				</div>
 				<div class="col s12 m6 l6">
 					<label for="base">Base</label>
-					<input type="number" name="base">
+					<input type="number" name="base" id="base">
 					<label for="altura">Height</label>
-					<input type="number" name="altura">
+					<input type="number" name="altura" id="altura">
 					<button class="btn waves-effect waves-light center" onclick="calculate()">Calculate
 				  	</button>	 
 				</div>
@@ -33,7 +34,7 @@
 	</section>
 	<section id="three">
 		<footer>
-			<span>Developed with <span id="heart">❤</span> by <a href="#">Harland Lohora</a></span>
+			<span>Developed with <span id="heart">❤</span> by <a href="https://github.com/HarlandLohora">Harland Lohora</a></span>
 		</footer>
 	</section>
 	
