--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 				<div class="col s12 m6 l6">
 					<label for="base">Base</label>
 					<input type="number" name="base" id="base">
-					<label for="altura">Height</label>
-					<input type="number" name="altura" id="altura">
+					<label for="height">Height</label>
+					<input type="number" name="height" id="height">
 					<button class="btn waves-effect waves-light center" onclick="calculate()">Calculate
-				  	</button>	 
+				  	</button>
+				  	<br>
+				  	<br>
+				  	<h5 id="none">Area:<span id="result"></span> units<sup>2</sup></h5>	 
 				</div>
 			</div>
 		</div>
